0.7.0 (currently working on)
- [#1945] Feature: Add a file upload to the FE event editor
- [#1036] Change: Use terms.htmlid instead of the verbatim HTML ID in the HTML template
- [#2151] Fix: tx_seminars_templatehelper::getSubpartForCallback has to be protected in PHP 5.3
- [#2145] Change: Use an array and a foreach loop in createListHeader()
- [#2020] Fix: The "other dates for this topic" list shows also single events
- [#837] Change: Update the Seminar Manager to FORMidable 1.1.0
- [#2076] Fix: Date not linked in the "other dates for this topic" list
- [#1073] Feature: Add flexforms checkboxes to filter which event types should be displayed in the list view
- [#2113] Change: Move the filter for the event type to the seminar bag builder
- [#2105] Change: Remove the empty option from the top of the event type selector widget
- [#803] Change: Remove the _doEvents() method from the registration editor and the event editor
- [#2099] Feature: Provide the file type as CSS class in the list of downloadable file in the detail view
- [#1943] Feature: Add a global TS Setup switch "skip collision check"
- [#2074] Change: Drop the default event type (workshop)
- [#964] Change: Remove the additional event information from the registration page
- [#2078] Fix: Require static_taxes
- [#2093] Change: Allow creating fake front ends without adding a record to the pages table
- [#1916] Change: Use the createFakeFrontEnd function from the testing framework in the Seminar Manager
- [#1953] Feature: The file list should only be displayed for attendees
- [#2092] Change: Update the test record icon in seminars and oelib
- [#2067] Change: All fields from the FE user table should be usable in the notification e-mail
- [#1952] Feature: List the attached files in the detail view of an event
- [#1700] Feature: Add a tab "Access" for the BE event editor
- [#1902] Fix: "Reset filter" doesn't work
- [#2032] Fix: Hide the "referrer" field from the registration UI until it actually is used